<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <EditText android:id="@+id/edit_name"
            android:layout_height="wrap_content"
            android:layout_weight="1.86"
            android:layout_width="0dp"
            android:hint="Enter your name" />
        <Button android:id="@+id/submit_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Submit" />
    </LinearLayout>

    <TextView android:id="@+id/question1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/question1" />
    <Button android:id="@+id/choice_1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/choice_1"
        android:onClick="itemPicked" />
    <Button android:id="@+id/choice_2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/choice_2"
        android:onClick="itemPicked" />
    <Button android:id="@+id/choice_3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/choice_3"
        android:onClick="itemPicked" />
    <TextView android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/question2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/question2" />
    <Button android:id="@+id/location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Get location"
        android:onClick="getLocation" />
</LinearLayout>
